fix #4 word-wrapの追加

--- a/app/assets/stylesheets/user_smart_phone/common.css.scss
+++ b/app/assets/stylesheets/user_smart_phone/common.css.scss
@@ -1,5 +1,6 @@
 body {
   padding: 0;
+  word-wrap: break-word;
 }
 .container{
   position: relative;
